--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html id="app">
 <head>
   <title>{{title}}</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link href="//cdn.bootcss.com/normalize/4.1.1/normalize.min.css" rel="stylesheet">
   <link href="app/app.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/vue/latest/vue.js"></script>
