加入多说评论

--- a/index.html
+++ b/index.html
@@ -46,5 +46,19 @@
   </div>
 
   <script src="app/app.js" charset="utf-8"></script>
+
+  <div class="ds-thread container" data-thread-key="{{dog.name}}" data-title="{{title}}" data-url="http://iuhoay.github.io/boom/"></div>
+  <script type="text/javascript">
+  var duoshuoQuery = {short_name:"boom-iuhoay"};
+  (function() {
+    var ds = document.createElement('script');
+    ds.type = 'text/javascript';ds.async = true;
+    ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.unstable.js';
+    ds.charset = 'UTF-8';
+    (document.getElementsByTagName('head')[0]
+    || document.getElementsByTagName('body')[0]).appendChild(ds);
+  })();
+  </script>
+
 </body>
 </html>
