--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="container">
     <h2>体重记录</h2>
     <ul class="weights">
-      <li v-for="weight in dog.weights">{{weight.weight}} kg - <small>{{weight.date}}</small></li>
+      <li v-for="weight in weights">{{weight.weight}} kg - <small>{{weight.date}}</small></li>
     </ul>
   </div>
 
@@ -45,6 +45,7 @@
     </ul>
   </div>
 
+  <script src="https://cdn1.lncld.net/static/js/av-min-1.0.0.js"></script>
   <script src="app/app.js" charset="utf-8"></script>
 
   <div class="ds-thread container" data-thread-key="{{dog.name}}" data-title="{{title}}" data-url="http://iuhoay.github.io/boom/"></div>
