--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link href="//cdn.bootcss.com/normalize/4.1.1/normalize.min.css" rel="stylesheet">
   <link href="app/app.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/vue/latest/vue.js"></script>
+  <link rel="apple-touch-icon-precomposed" sizes="180x180" href="assets/images/icon.png">
+  <script src="//cdn.jsdelivr.net/vue/latest/vue.js"></script>
 </head>
 <body>
   <div class="container text-center">
