--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="//cdn.bootcss.com/normalize/4.1.1/normalize.min.css" rel="stylesheet">
   <link href="app/app.css" rel="stylesheet">
   <link rel="apple-touch-icon-precomposed" sizes="180x180" href="asserts/images/icon.png">
-  <script src="//cdn.jsdelivr.net/vue/latest/vue.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js"></script>
 </head>
 <body>
   <div class="container text-center">
